# pcb-defect-detection

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  demo.py  hyperparameter_optimization.py  ieee_paper.tex  pyproject.toml  pytest.ini  references.bib  requirements.txt  setup.sh
.github/workflows/: ci.yml
advanced_ml_techniques/: domain_contrastive_learning.py  ensemble_uncertainty.py  knowledge_distillation.py  test_time_adaptation.py
api/: __init__.py  inference.py
core/: foundation_adapter.py
docs/: conf.py  generate_figures.py  generate_poster.py  index.rst  installation.md  quickstart.md
docs/api/: core.rst
docs/templates/: pandoc_ieee_math.tex
docs/tutorials/: getting_started.ipynb
enhanced_pcb_training/: adversarial_training.py  self_supervised_learning.py
evaluation/: metrics.py
examples/: README.md  basic_inference.py  batch_processing.py
methods/: ad_clip.py
synthetic_data/: generators.py
tests/: test_enhanced_modules.py  test_foundation_adapter.py
